--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="index.css">
 <body>
 <h1>Hello World</h1>
 <p>This is the first test. Style will be next on the list for
