--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <link rel="stylesheet" href="index.css">
 <body>
-<h1>Hello World</h1>
+<h1></h1>
 <p>This is the first test. Style will be next on the list for
-changes.</p>
+changes. The color is here just so you dont get bored</p>
 </body>
 </html>
