--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <body>
 <h1></h1>
 <p>This is the first test. Style will be next on the list for
-changes. The color is here just so you dont get bored</p>
+changes. The color is here just so you dont get bored. Plus Adrianna is cute. :^)</p>
 </body>
 </html>
