--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
-<html>
-<link rel="stylesheet" href="index.css">
-<body>
-<h1></h1>
-<p>This is the first test. Style will be next on the list for
-changes. The color is here just so you dont get bored. Plus Adrianna is cute. :^)</p>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UFT-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="index.css" />
+
+    <div class=topbar></div>
+  </head>
+
+  <body>
+    <h1></h1>
+    <div class="sidebar">
+
+    </div>
+    <p class="mainpar">
+      This is the first test. Style will be next on the list for changes. The
+      color is here just so you dont get bored. Plus Adrianna is cute. :^)
+    </p>
+    
+  </body>
 </html>
