--- a/index.html
+++ b/index.html
@@ -14,8 +14,15 @@
 
     </div>
     <p class="mainpar">
-      This is the first test. Style will be next on the list for changes. The
-      color is here just so you dont get bored. Plus Adrianna is cute. :^)
+    Welcome to the site! this is a landing page for Burts R&D.<br><br>
+      
+    Below is a list of changes to come next:<br>
+    1.style of most pages will be next on the list for changes.<br>
+    2.The color selection maybe per paper just to get pratice or one style sheet.<br>
+    3.Top row/header<br>
+    4.Intro<br>
+    <br>
+    P.S. Adrianna is cute. :^)
     </p>
     
   </body>
