--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <Title>Burt's R&D</Title>
     <meta charset="UFT-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="index.css" />
@@ -9,6 +10,13 @@
   </head>
 
   <body>
+    <!--
+    ==================================================================================================
+    Hello! Welcome if your reading this I hope all looks well in this area. All this code is made by
+    hand! Most of this is for pratice so if you see something wrong message me on github or email me 
+    if you have and tips! :^)
+    ==================================================================================================
+    -->
     <h1></h1>
     <div class="sidebar">
 
