Added blog post page and about links

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       <div class=filter>
         <a href="index.html">Home</a>
         <span class=bar>|</span>
-        <a href="index.html">Blog Posts</a>
+        <a href="blogposts.html">Blog Posts</a>
         <span class=bar>|</span>
-        <a href="index.html">About</a>
+        <a href="about.html">About</a>
       </div>
     </div>
 
