--- a/about.html
+++ b/about.html
@@ -7,7 +7,10 @@
         <link rel="stylesheet" href="index.css" />
     </head>
 
+<body>
+    <img src="/images/IMG_4840-02.jpeg" alt="Water on Rocks">
 
+</body>
 
 
 
