css updates to make it responsive and some more text to debug

--- a/about.html
+++ b/about.html
@@ -8,8 +8,33 @@
     </head>
 
 <body>
-    <img src="/images/IMG_4840-02.jpeg" alt="Water on Rocks">
 
+    <div Class="header">
+        <div class=filter>
+          <a href="index.html">Home</a>
+          <span class=bar>|</span>
+          <a href="blogposts.html">Blog Posts</a>
+          <span class=bar>|</span>
+          <a href="about.html">About</a>
+        </div>
+      </div>
+
+
+    <article>
+        <img class="top-img" src="/images/IMG_4840-02.jpeg" alt="Water on Rocks">
+        <img class="embedded-img" src="/images/IMG_4840-02.jpeg" alt="Water on Rocks">
+        <h2>Welcome to the site!</h2>
+        <p class="mainpar">
+          
+        This site is going to a personal spot for all my project that go on in my free time. While this may 
+        not be update dated as much as I would like I will still try to do it much as possible. I spend a lot of my
+        time at work but during my days off i uselly spend it with my girlfriend and riding motorcycle. 
+        hopefully this site will not only be a place for technical articales but also some hobby prodject having to 
+        do with motocross and motorcycles in general.<br><br><br>
+        
+        P.S.  I still  think Adrianna is a cutie. :^)
+        </p>
+    </article>
 </body>
 
 
