fixed grids and added another img size
changed the order of CSS main page and made it in order of elements, plus clean it up. another change was to fixe the header use a grid as the article did. In the article section there is also a third image size.

--- a/about.html
+++ b/about.html
@@ -8,8 +8,8 @@
     </head>
 
 <body>
-
-    <div Class="header">
+    <header>
+        
         <div class=filter>
           <a href="index.html">Home</a>
           <span class=bar>|</span>
@@ -17,12 +17,12 @@
           <span class=bar>|</span>
           <a href="about.html">About</a>
         </div>
-      </div>
-
+    </header>
 
     <article>
         <img class="top-img" src="/images/IMG_4840-02.jpeg" alt="Water on Rocks">
         <img class="embedded-img" src="/images/IMG_4840-02.jpeg" alt="Water on Rocks">
+        <img class="embedded-img2" src="/images/IMG_4840-02.jpeg" alt="Water on Rocks">
         <h2>Welcome to the site!</h2>
         <p class="mainpar">
           
