errors on about page and readme

--- a/index.html
+++ b/index.html
@@ -28,15 +28,26 @@
   </header>
 
   <article>
-    <h2><br><br><br>Welcome to the site! This is a landing page for Burts R&D.</h2><br><br>
-    <p> 
-    Below is a list of changes to come next:<br>
-    1.Style of pages will be finalized and it still needs a footer<br>
+    <h2><br><br>Welcome to the site!</h2><br><br>
+    <p>Thanks for visiting the site. You may have notice that the site is missing some 
+    information or content… There is a good reason for this as this site was completely built by me.
+    Every piece of code was typed out by hand with no prior knowledge of HTML or CSS
+    so that I could/can learn the details of formatting a website. This has led to some questionable 
+    design choices and a lacking UI so far, but it is getting there slowly. Whether or not that was 
+    good idea I will find out at the end of the journey, but I will be sure to write a post about it 
+    when it is all over. In the meantime, you can check back here to see what is coming next.<br>
+
+    <br>Below is a log of changes that are being made to site. 
+    It is ever evolving and hopefully should reflect on GitHub if I keep up with it there.<br>
+
+    <br>1.Style of pages will be finalized and it still needs a footer<br>
     <del>2.color side bar for practice and style</del> I didn't like it and it wasn;t important for the purpose of this site<br>
     <del>3.Top row/header</del> Done!<br>
     4.Intro<br>
+    5.A Logo, something simple for Top<br>
+    6.A post of some type
     <br>
-    P.S. Adrianna is cute. :^)
+    <br>P.S. Adrianna is cute. :^)
     </p>
   </article>
 
