--- a/index.html
+++ b/index.html
@@ -18,12 +18,18 @@
     ==================================================================================================
     -->
   <header>
-    <div class=filter>
-      <a href="index.html">Home</a>
-      <span class=bar>|</span>
-      <a href="blogposts.html">Blog Posts</a>
-      <span class=bar>|</span>
-      <a href="about.html">About</a>
+    <div class="topbar">
+      <a href="index.html">
+        <img class="logo" src="/images/logo1.png"alt="logo">
+      </a>
+      <div class=filter>
+      
+        <a href="index.html">Home</a>
+        <span class=bar>|</span>
+        <a href="blogposts.html">Blog Posts</a>
+        <span class=bar>|</span>
+        <a href="about.html">About</a>
+      </div>
     </div>
   </header>
 
