--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <del>2.color side bar for practice and style</del> I didn't like it and it wasn;t important for the purpose of this site<br>
     <del>3.Top row/header</del> Done!<br>
     4.Intro<br>
-    5.A Logo, something simple for Top<br>
+    <del>5.A Logo idea,</del> something simple for Top. Still needs to be refined<br>
     6.A post of some type
     <br>
     <br>P.S. Adrianna is cute. :^)
