--- a/blogposts.html
+++ b/blogposts.html
@@ -9,13 +9,19 @@
 
     <body>
         <header>
-            <div class=filter>
-              <a href="index.html">Home</a>
-              <span class=bar>|</span>
-              <a href="blogposts.html">Blog Posts</a>
-              <span class=bar>|</span>
-              <a href="about.html">About</a>
-            </div>
+            <div class="topbar">
+                <a href="index.html">
+                  <img class="logo" src="/images/logo2.png"alt="logo">
+                </a>
+                <div class=filter>
+                
+                  <a href="index.html">Home</a>
+                  <span class=bar>|</span>
+                  <a href="blogposts.html">Blog Posts</a>
+                  <span class=bar>|</span>
+                  <a href="about.html">About</a>
+                </div>
+              </div>
         </header>
     
         <article>
