--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <Title>Burt's R&D</Title>
-    <meta charset="UFT-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="index.css" />
 
-    
-  </head>
+<head>
+  <Title>Burt's R&D</Title>
+  <meta charset="UFT-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="index.css" />
 
-  <body>
-    <!--
+
+</head>
+
+<body>
+  <!--
     ==================================================================================================
     Hello! Welcome if your reading this I hope all looks well in this area. All this code is made by
     hand! Most of this is for pratice so if you see something wrong message me on github or email me 
@@ -20,10 +21,10 @@
   <header>
     <div class="topbar">
       <a href="index.html">
-        <img class="logo" src="/images/logo2.png"alt="logo">
+        <img class="logo" src="/images/logo2.png" alt="logo">
       </a>
       <div class=filter>
-      
+
         <a href="index.html">Home</a>
         <span class=bar>|</span>
         <a href="blogposts.html">Blog Posts</a>
@@ -35,28 +36,64 @@
 
   <article>
     <h2><br><br>Welcome to the site!</h2><br><br>
-    <p>Thanks for visiting the site. You may have notice that the site is missing some 
-    information or content… There is a good reason for this as this site was completely built by me.
-    Every piece of code was typed out by hand with no prior knowledge of HTML or CSS
-    so that I could/can learn the details of formatting a website. This has led to some questionable 
-    design choices and a lacking UI so far, but it is getting there slowly. Whether or not that was 
-    good idea I will find out at the end of the journey, but I will be sure to write a post about it 
-    when it is all over. In the meantime, you can check back here to see what is coming next.<br>
+    <p>Thanks for visiting the site. You may have notice that the site is missing some
+      information or content… There is a good reason for this as this site was completely built by me.
+      Every piece of code was typed out by hand with no prior knowledge of HTML or CSS
+      so that I could/can learn the details of formatting a website. This has led to some questionable
+      design choices and a lacking UI so far, but it is getting there slowly. Whether or not that was
+      good idea I will find out at the end of the journey, but I will be sure to write a post about it
+      when it is all over. In the meantime, you can check back here to see what is coming next.<br>
 
-    <br>Below is a log of changes that are being made to site. 
-    It is ever evolving and hopefully should reflect on GitHub if I keep up with it there.<br>
+      <br>Below is a log of changes that are being made to site.
+      It is ever evolving and hopefully should reflect on GitHub if I keep up with it there.<br>
 
-    <br>1.Style of pages will be finalized and it still needs a footer<br>
-    <del>2.color side bar for practice and style</del> I didn't like it and it wasn;t important for the purpose of this site<br>
-    <del>3.Top row/header</del> Done!<br>
-    4.Intro<br>
-    <del>5.A Logo idea,</del> something simple for Top. Still needs to be refined<br>
-    6.A post of some type
-    <br>
-    <br>P.S. Adrianna is cute. :^)
+      <br>1.Style of pages will be finalized and it still needs a footer<br>
+      <del>2.color side bar for practice and style</del> I didn't like it and it wasn;t important for the purpose of
+      this site<br>
+      <del>3.Top row/header</del> Done!<br>
+      4.Intro<br>
+      <del>5.A Logo idea,</del> something simple for Top. Still needs to be refined<br>
+      6.A post of some type<br>
+      7.A footer
+      <br>
+      <br>P.S. Adrianna is cute. :^)
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
     </p>
   </article>
-
-  </body>
+  <footer>
+    <a href="https://www.instagram.com/barticus455/">
+      <img class="social" src="/images/instagram.png" alt="social media">
+    </a>
+  </footer>
+</body>
 
 </html>
