added footer and updated list
added footer on all pages

--- a/about.html
+++ b/about.html
@@ -38,7 +38,14 @@
         P.S.  I still  think Adrianna is a cutie. :^)
         </p>
     </article>
-
+    <footer>
+      <a href="https://www.instagram.com/barticus455/">
+        <img class="social" src="/images/instagram.png" alt="instagram">
+      </a>
+      <a href="https://github.com/bclutter455">
+        <img class="social" src="/images/github.png" alt="github">
+      </a>
+    </footer>
 </body>
 
 </html>
