--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     <p>Thanks for visiting the site. You may have notice that the site is missing some
       information or content… There is a good reason for this as this site was completely built by me.
       Every piece of code was typed out by hand with no prior knowledge of HTML or CSS
-      so that I could/can learn the details of formatting a website. This has led to some questionable
-      design choices and a lacking UI so far, but it is getting there slowly. Whether or not that was
-      good idea I will find out at the end of the journey, but I will be sure to write a post about it
+      so that I could/can learn the details of formatting a website without all the frame works or generators.
+      This has led to some questionable design choices and a lacking UI so far, but it is getting there slowly.
+      Whether or not that was good idea I will find out at the end of the journey, but I will be sure to write a post about it
       when it is all over. In the meantime, you can check back here to see what is coming next.<br>
 
       <br>Below is a log of changes that are being made to site.
@@ -54,12 +54,11 @@
       4.Intro<br>
       <del>5.A Logo idea,</del> something simple for Top. Still needs to be refined<br>
       6.A post of some type<br>
-      7.A footer
+      <del> 7.A footer </del> I have a draft of a footer<br>
+      8. This will be moving to a static site generator soon or mess with jekyll to learn more about those as that will be more useful after going through the pain of hand made CSS
+
       <br>
       <br>P.S. Adrianna is cute. :^)
-      <br>
-      <br>
-      <br>
       <br>
       <br>
       <br>
@@ -91,7 +90,10 @@
   </article>
   <footer>
     <a href="https://www.instagram.com/barticus455/">
-      <img class="social" src="/images/instagram.png" alt="social media">
+      <img class="social" src="/images/instagram.png" alt="instagram">
+    </a>
+    <a href="https://github.com/bclutter455">
+      <img class="social" src="/images/github.png" alt="github">
     </a>
   </footer>
 </body>
