--- a/blogposts.html
+++ b/blogposts.html
@@ -34,7 +34,14 @@
 
     </p>
   </article>
-
+  <footer>
+    <a href="https://www.instagram.com/barticus455/">
+      <img class="social" src="/images/instagram.png" alt="instagram">
+    </a>
+    <a href="https://github.com/bclutter455">
+      <img class="social" src="/images/github.png" alt="github">
+    </a>
+  </footer>
 </body>
 
 </html>
