--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <Title>Burt's R&D</Title>
   <meta charset="UFT-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="A personal blog to post projects and ideas revoloving around engineering and idea development">
   <link rel="stylesheet" href="index.css" />
 
 
@@ -58,7 +59,6 @@
       8. This will be moving to a static site generator soon or mess with jekyll to learn more about those as that will be more useful after going through the pain of hand made CSS
 
       <br>
-      <br>P.S. Adrianna is cute. :^)
       <br>
       <br>
       <br>
@@ -83,7 +83,7 @@
       <br>
       <br>
       <br>
-      <br>
+      <br>P.S. Adrianna is a cutie patootie :^)
       <br>
       <br>
     </p>
