first basic post to get the hang of work flow
first post and an example post

--- a/content/post8202022.html
+++ b/content/post8202022.html
@@ -5,7 +5,7 @@
   <Title>Burt's R&D Blog Posts</Title>
   <meta charset="UFT-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="../index.css" />
 </head>
 
 <body>
@@ -16,21 +16,24 @@
       </a>
       <div class=filter>
 
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
         <span class=bar>|</span>
-        <a href="blogposts.html">Blog Posts</a>
+        <a href="../blogposts.html">Blog Posts</a>
         <span class=bar>|</span>
-        <a href="about.html">About</a>
+        <a href="../about.html">About</a>
       </div>
     </div>
   </header>
 
   <article>
-    <h2>Blog posts</h2>
-    <p class="mainpar">
+   
 
-      <a href="content/post81522.html">Procrastination</a><br><br><br>
-      <a href="content/post8202022.html">Motorcyles I would like to own</a><br><br><br>
+    <h2> <br><br><br><br>
+    Motorcyles I would like to own</h2>
+    <h3>8-20-2022</h3>
+    <p class="mainpar">
+      &emsp;&emsp;Bikes
+
 
     </p>
   </article>
