added color bar for top

--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
         <span class=bar>|</span>
         <a href="about.html">About</a>
       </div>
+      <div class="colorbar">
+      </div>
     </div>
     
-    </div>
   </header>
 
   <article>
@@ -51,8 +52,7 @@
       It is ever evolving and hopefully should reflect on GitHub if I keep up with it there.<br>
 
       <br>1.Style of pages will be finalized and it still needs a footer<br>
-      <del>2.color side bar for practice and style</del> I didn't like it and it wasn;t important for the purpose of
-      this site<br>
+      <del>2.color side bar for practice and style</del> I didn't like it on the side so it is at the top now will still move around<br>
       <del>3.Top row/header</del> Done!<br>
       4.Intro<br>
       <del>5.A Logo idea,</del> something simple for Top. Still needs to be refined<br>
