fix formatting on other pages

--- a/about.html
+++ b/about.html
@@ -22,9 +22,12 @@
           <a href="about.html">About</a>
         </div>
       </div>
+      <div class="colorbar">
+      </div>
     </header>
 
     <article>
+      <p></p>
         <img class="top-img" src="/images/IMG_4840-02.jpeg" alt="Water on Rocks">
         <h2>Welcome to the site!</h2>
         <p>
