--- a/content/post81522.html
+++ b/content/post81522.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <div class="topbar">
-      <a href="index.html">
+      <a href="../index.html">
         <img class="logo" src="/images/logo2.png" alt="logo">
       </a>
       <div class=filter>
@@ -23,6 +23,8 @@
         <a href="../about.html">About</a>
       </div>
     </div>
+    <div class="colorbar">
+    </div>
   </header>
 
   <article>
@@ -30,7 +32,7 @@
 
     <h2> <br><br><br><br>
     Procrastination</h2>
-    <h3>8-15/2022</h3>
+    <h3>8-15-2022</h3>
     <p class="mainpar">
       &emsp;&emsp;Sometimes I just look around and what I’m doing and then I compare myself
       to what other people are doing. And they see them with websites, photos, social media, girlfriends, full-time job, and
