--- a/blogposts.html
+++ b/blogposts.html
@@ -23,6 +23,8 @@
         <a href="about.html">About</a>
       </div>
     </div>
+    <div class="colorbar">
+    </div>
   </header>
 
   <article>
