--- a/content/post8202022.html
+++ b/content/post8202022.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <div class="topbar">
-      <a href="index.html">
+      <a href="../index.html">
         <img class="logo" src="/images/logo2.png" alt="logo">
       </a>
       <div class=filter>
@@ -22,6 +22,8 @@
         <span class=bar>|</span>
         <a href="../about.html">About</a>
       </div>
+    </div>
+    <div class="colorbar">
     </div>
   </header>
 
