clean up of all pages

--- a/blogposts.html
+++ b/blogposts.html
@@ -1,49 +1,47 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>Burt's R&D Blog Posts</title>
+    <meta charset="UFT-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="index.css" />
+  </head>
 
-<head>
-  <Title>Burt's R&D Blog Posts</Title>
-  <meta charset="UFT-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="index.css" />
-</head>
-
-<body>
-  <header>
-    <div class="topbar">
-      <a href="index.html">
-        <img class="logo" src="/images/logo2.png" alt="logo">
-      </a>
-      <div class=filter>
-
-        <a href="index.html">Home</a>
-        <span class=bar>|</span>
-        <a href="blogposts.html">Blog Posts</a>
-        <span class=bar>|</span>
-        <a href="about.html">About</a>
+  <body>
+    <header>
+      <div class="topbar">
+        <a href="index.html">
+          <img class="logo" src="/images/logo2.png" alt="logo" />
+        </a>
+        <div class="filter">
+          <a href="index.html">Home</a>
+          <span class="bar">|</span>
+          <a href="blogposts.html">Blog Posts</a>
+          <span class="bar">|</span>
+          <a href="about.html">About</a>
+        </div>
       </div>
-    </div>
-    <div class="colorbar">
-    </div>
-  </header>
+      <div class="colorbar"></div>
+    </header>
 
-  <article>
-    <h2>Blog posts</h2>
-    <p class="mainpar">
-
-      <a href="content/post81522.html">Procrastination</a><br><br><br>
-      <a href="content/post8202022.html">Motorcyles I would like to own</a><br><br><br>
-
-    </p>
-  </article>
-  <footer>
-    <a href="https://www.instagram.com/barticus455/">
-      <img class="social" src="/images/instagram.png" alt="instagram">
-    </a>
-    <a href="https://github.com/bclutter455">
-      <img class="social" src="/images/github.png" alt="github">
-    </a>
-  </footer>
-</body>
-
+    <article>
+      <h2>Blog posts</h2>
+      <p class="mainpar">
+        <a href="content/post9242022.html">New Bike Day<br /><small>9-24-2022</small></a
+        ><br /><br /><br />
+        <a href="content/post8202022.html">Website Development Log1<br /><small>8-20-2022</small></a
+        ><br /><br /><br />
+        <a href="content/post8152022.html">Procrastination<br /><small>8-15-2022</small></a
+        ><br /><br /><br />
+      </p>
+    </article>
+    <footer>
+      <a href="https://www.instagram.com/barticus455/">
+        <img class="social" src="/images/instagram.png" alt="instagram" />
+      </a>
+      <a href="https://github.com/bclutter455">
+        <img class="social" src="/images/github.png" alt="github" />
+      </a>
+    </footer>
+  </body>
 </html>
