--- a/content/post-template.html
+++ b/content/post-template.html
@@ -31,10 +31,10 @@
    
 
     <h2> <br><br><br><br>
-    Website Development Log 1</h2>
-    <h3>8-20-2022</h3>
+    Title Here</h2>
+    <h3>x-xx-20xx</h3>
     <p class="mainpar">
-      &emsp;&emsp; 
+      &emsp;&emsp;Dfg kjgjl fsdgkrf fsdfdtyyh. 
 
 
     </p>
