--- a/content/post9242022.html
+++ b/content/post9242022.html
@@ -31,10 +31,10 @@
    
 
     <h2> <br><br><br><br>
-    Website Development Log 1</h2>
-    <h3>8-20-2022</h3>
+    New Bike Day</h2>
+    <h3>9-24-2022</h3>
     <p class="mainpar">
-      &emsp;&emsp; 
+      &emsp;&emsp;I think bikes are cool so I just bought a new one. 
 
 
     </p>
