--- a/blogposts.html
+++ b/blogposts.html
@@ -29,7 +29,7 @@
       <p class="mainpar">
         <a href="content/post9242022.html">New Bike Day<br /><small>9-24-2022</small></a
         ><br /><br /><br />
-        <a href="content/post8202022.html">Website Development Log1<br /><small>8-20-2022</small></a
+        <a href="content/post8202022.html">Website Development Log #1<br /><small>8-20-2022</small></a
         ><br /><br /><br />
         <a href="content/post8152022.html">Procrastination<br /><small>8-15-2022</small></a
         ><br /><br /><br />
