--- a/content/post8152022.html
+++ b/content/post8152022.html
@@ -38,18 +38,22 @@
         give my give a little time to my partner. But then I look back over the past few months at my project folder and
         I look how many things I started, I’ve done, and all the hobbies I’ve had over the years from running, climbing,
         dirt biking, and all the models I'v designed then I realize I have been doing stuff the entire time without even
-        knowing it. Just cause I was slow this week and I was the week before too doesn't maken all of my work I have
+        knowing it. Just cause I was slow this week and I was the week before too doesn't make all of my work I have
         done invalid. It seems my brain always wants to go foward at a never slowing pace. The mind wants to beat me up
         for not getting all the things it wants to get done. When I look back I think of when I was thinking things like
-        "I should be farther along with the website" or "I should’ve done more coding" with a career in mind that could
-        have been my reality.
-        <br /><br />
-        &emsp;&emsp;I honestly can look at all the years I have thought that I was doing nothing and then see that I
-        accomplished and it was all in just five years. I have to be thankful for all the people I’ve met and the
-        opportunities I’ve had. I have progressed with so many projects in just a short time. I think really my mind is
-        just trying to remind me that I could be doing so much more because I have done it and I keep doing it year
-        after year. Just like this post it’s going to get me finishing one more project here on this website at least
-        for this week.
+        "I should be farther along with the website" or "I should’ve done more coding" ddreaming of having made those
+        items my career path and n ot relizing my path with be what it need to be.
+        <br />
+        &emsp;&emsp;I honestly can look at all the years I have thought that I was doing nothing and then see what I
+        accomplished and it was so many things in just five years. I have to be thankful for all the people I’ve met and
+        the opportunities I’ve had to learn and experience. I have progressed with so many projects in just a short time
+        amount of time looking back. I think really my mind is just trying to remind me that I could be doing so much
+        more because I have done it so many thing in the past and I keep doing it year after year. Just like this post I
+        get to complete one more project this time and one more project here on this website to post about. May you all
+        get done what you want to get done to achieve your dreams.<br /><br /><br />
+
+        Love,<br />
+        Burt
         <br /><br /><br />
       </p>
     </article>
