--- a/content/post8202022.html
+++ b/content/post8202022.html
@@ -1,52 +1,46 @@
-<!doctype html>
+!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>Burt's R&D Blog Posts</title>
+    <meta charset="UFT-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="../index.css" />
+  </head>
 
-<head>
-  <Title>Burt's R&D Blog Posts</Title>
-  <meta charset="UFT-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="../index.css" />
-</head>
-
-<body>
-  <header>
-    <div class="topbar">
-      <a href="../index.html">
-        <img class="logo" src="/images/logo2.png" alt="logo">
-      </a>
-      <div class=filter>
-
-        <a href="../index.html">Home</a>
-        <span class=bar>|</span>
-        <a href="../blogposts.html">Blog Posts</a>
-        <span class=bar>|</span>
-        <a href="../about.html">About</a>
+  <body>
+    <header>
+      <div class="topbar">
+        <a href="../index.html">
+          <img class="logo" src="/images/logo2.png" alt="logo" />
+        </a>
+        <div class="filter">
+          <a href="../index.html">Home</a>
+          <span class="bar">|</span>
+          <a href="../blogposts.html">Blog Posts</a>
+          <span class="bar">|</span>
+          <a href="../about.html">About</a>
+        </div>
       </div>
-    </div>
-    <div class="colorbar">
-    </div>
-  </header>
+      <div class="colorbar"></div>
+    </header>
 
-  <article>
-   
-
-    <h2> <br><br><br><br>
-    Website Development Log 1</h2>
-    <h3>8-20-2022</h3>
-    <p class="mainpar">
-      &emsp;&emsp; 
-
-
-    </p>
-  </article>
-  <footer>
-    <a href="https://www.instagram.com/barticus455/">
-      <img class="social" src="/images/instagram.png" alt="instagram">
-    </a>
-    <a href="https://github.com/bclutter455">
-      <img class="social" src="/images/github.png" alt="github">
-    </a>
-  </footer>
-</body>
-
+    <article>
+      <h2>
+        <br /><br /><br /><br />
+        Website Development Log #1
+      </h2>
+      <h3>8-20-2022</h3>
+      <p class="mainpar">
+        &emsp;&emsp; So just to go back in time a bit i want to go all the way back to where this all started for me...
+      </p>
+    </article>
+    <footer>
+      <a href="https://www.instagram.com/barticus455/">
+        <img class="social" src="/images/instagram.png" alt="instagram" />
+      </a>
+      <a href="https://github.com/bclutter455">
+        <img class="social" src="/images/github.png" alt="github" />
+      </a>
+    </footer>
+  </body>
 </html>
