--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
 
     <article>
       <h2><br />Welcome to the site!</h2>
-      <br /><br />
       <p>
         Thanks for visiting the site. You may have notice that the site is missing some information or content… There is
         a good reason for this as this site was completely built by me. Every piece of code was typed out by hand with
@@ -45,9 +44,11 @@
         frame works or generators. This has led to some questionable design choices and a lacking UI so far, but it is
         getting there slowly. Whether or not that was good idea I will find out at the end of the journey, but I will be
         sure to write a post about it when it is all over. In the meantime, you can check back here to see what is
-        coming next.<br />
+        coming next.
+      </p>
 
-        <br />Below is a log of changes that are being made to site. It is ever evolving and hopefully should reflect on
+      <p>
+        Below is a log of changes that are being made to site. It is ever evolving and hopefully should reflect on
         GitHub if I keep up with it there.<br /><br />
 
         <del>1.Style of pages will be finalized and it still needs a footer</del> Phase one done need to get other item
@@ -56,19 +57,15 @@
         still move around<br />
         <del>3.Top row/header</del> Done!<br />
         4.Intro<br />
-        <del>5.A Logo idea,</del> something simple for Top. Still needs to be refined<br />
-        6.A post of some type<br />
-        <del> 7.A footer </del> I have a draft of a footer<br />
-        8. This will be moving to a static site generator soon or mess with jekyll to learn more about those as that
-        will be more useful after going through the pain of hand made CSS
+        <del>5.A Logo idea,</del> Something simple for Top. Still needs to be refined<br />
+        <del> 6.A footer </del> I have a draft of a footer<br />
+        <del>7. This will be moving to a static site generator soon or mess with jekyll to learn more about those</del>
+        <del>as that will be more useful.</del>
+        This was much harder then i though it was then just hand writing for now so i will use jekyll on pages. I havent
+        done it it yet but should be the easiest option.<br />
+      </p>
 
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
+      <p>
         <br />
         <br />
         <br />
@@ -77,6 +74,7 @@
         <br />P.S. Adrianna is a cutie patootie :^)
       </p>
     </article>
+
     <footer>
       <a href="https://www.instagram.com/barticus455/">
         <img class="social" src="/images/instagram.png" alt="instagram" />
