--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="A personal blog to post projects and ideas revoloving around engineering and idea development"
     />
+    <meta property="og:image" content="images/logo2.png">
     <link rel="stylesheet" href="index.css" />
   </head>
 
