--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Burt's R&D</title>
-    <link rel="shortcut icon" href="images/logo.png">
+    <link rel="shortcut icon" href="images/logo2.png">
     <meta charset="UFT-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
