--- a/content/post-template.html
+++ b/content/post-template.html
@@ -3,6 +3,7 @@
 
 <head>
   <Title>Burt's R&D Blog Posts</Title>
+  <link rel="shortcut icon" href="/images/logo3white.png">
   <meta charset="UFT-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="../index.css" />
@@ -12,7 +13,7 @@
   <header>
     <div class="topbar">
       <a href="../index.html">
-        <img class="logo" src="/images/logo2.png" alt="logo">
+        <img class="logo" src="/images/logo3white.png" alt="logo">
       </a>
       <div class=filter>
 
