--- a/blogposts.html
+++ b/blogposts.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Burt's R&D Blog Posts</title>
+    <link rel="shortcut icon" href="images/logo3white.png">
     <meta charset="UFT-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="index.css" />
@@ -11,7 +12,7 @@
     <header>
       <div class="topbar">
         <a href="index.html">
-          <img class="logo" src="/images/logo2.png" alt="logo" />
+          <img class="logo" src="/images/logo3white.png" alt="logo" />
         </a>
         <div class="filter">
           <a href="index.html">Home</a>
