color and new icon for google

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Burt's R&D</title>
-    <link rel="shortcut icon" href="images/logo3white.png">
+    <link rel="shortcut icon" href="images/logo3whiteicon.png">
     <meta charset="UFT-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
@@ -40,30 +40,17 @@
       <h2><br />Welcome to the site!</h2>
       <p>
         Thanks for visiting the site. You may have notice that the site is missing some information or content… There is
-        a good reason for this as this site was completely built by me. Every piece of code was typed out by hand with
+        a good reason for this as the site was completely built by me. Every piece of code was typed out by hand with
         no prior knowledge of HTML or CSS so that I could/can learn the details of formatting a website without all the
         frame works or generators. This has led to some questionable design choices and a lacking UI so far, but it is
         getting there slowly. Whether or not that was good idea I will find out at the end of the journey, but I will be
         sure to write a post about it when it is all over. In the meantime, you can check back here to see what is
         coming next.
       </p>
-
       <p>
-        Below is a log of changes that are being made to site. It is ever evolving and hopefully should reflect on
-        GitHub if I keep up with it there.<br /><br />
-
-        <del>1.Style of pages will be finalized and it still needs a footer</del> Phase one done need to get other item
-        going<br />
-        <del>2.color side bar for practice and style</del> I didn't like it on the side so it is at the top now may
-        still move around<br />
-        <del>3.Top row/header</del> Done!<br />
-        4.Intro<br />
-        <del>5.A Logo idea,</del> Something simple for Top. Still needs to be refined<br />
-        <del> 6.A footer </del> I have a draft of a footer<br />
-        <del>7. This will be moving to a static site generator soon or mess with jekyll to learn more about those</del>
-        <del>as that will be more useful.</del>
-        This was much harder then i though it was then just hand writing for now so i will use jekyll on pages. I havent
-        done it it yet but should be the easiest option.<br />
+      This site will be a place for me to post on a varity of topics. This may be engineering topics, motorcycle adventure, how to guides,
+       picture I took and their story, or even open souces hardware if I ever get around to it. So take a look in the Blog Posts link if
+        you want hear about any of those things.
       </p>
 
       <p>
