--- a/content/post9242022.html
+++ b/content/post9242022.html
@@ -35,7 +35,23 @@
     New Bike Day</h2>
     <h3>9-24-2022</h3>
     <p class="mainpar">
-      &emsp;&emsp;I think bikes are cool so I just bought a new one. 
+      &emsp;&emsp;I think motorcycles are cool, so I just bought a new one. The only issue is I can
+      only really have one for now. Fast forward me browsing craigslist every day for a couple months
+      straight and I was able to get what I wanted. Not just any bike though, but one of the most
+      versatile bikes available. So, are we talking about a big giant Adventure bike, right? Not
+      exactly. How about an old DRZ? Closer but missing one key aspect. I wanted this bike to not
+      only be able to do anything but to be able to be competitive in a race, which is very different
+      when people think of a do it all bike. 
+
+    <p>    
+      So, I grabbed myself a hardly ridden 2019 CRF450l for 8gs with only 284 miles on the ODO and that
+      was the start of it all. Now this isn’t a bike I’m going to have and turn around and sell in 
+      couple years, I’m riding this thing into the ground dragging it from state to state with me as I 
+      start my career in engineering and its going to switch jobs as much as indecisive freshman in 
+      collage. One of the first things you expect me to do get a pipe and EDU, but not I’m leaving stock 
+      as I love a quite bike and the mellow smooth power delivery this thing has (that is after you 
+      remove the backfire screen from the air filter).
+    </p> 
 
 
     </p>
