--- a/content/post9242022.html
+++ b/content/post9242022.html
@@ -35,26 +35,46 @@
     New Bike Day</h2>
     <h3>9-24-2022</h3>
     <p class="mainpar">
-      &emsp;&emsp;I think motorcycles are cool, so I just bought a new one. The only issue is I can
-      only really have one for now. Fast forward me browsing craigslist every day for a couple months
+      &emsp;&emsp;I think motorcycles are cool, so I bought a another one. The only issue is I can only
+      guarantee at least one bike for this period in my life right now and may lose access to my other bikes.
+      Fast forward me browsing craigslist every day for a couple months
       straight and I was able to get what I wanted. Not just any bike though, but one of the most
       versatile bikes available. So, are we talking about a big giant Adventure bike, right? Not
-      exactly. How about an old DRZ? Closer but missing one key aspect. I wanted this bike to not
-      only be able to do anything but to be able to be competitive in a race, which is very different
-      when people think of a do it all bike. 
+      exactly. How about an old DRZ? Closer but missing one key aspect. I wanted this bike to not only
+      be able to do anything but to be able to be competitive in a most races, which is very
+      different when people think of a do it all bike because you end up with bike that’s
+       not great on the road. I think this bike can ready do it all though.
+    </p>
 
     <p>    
-      So, I grabbed myself a hardly ridden 2019 CRF450l for 8gs with only 284 miles on the ODO and that
+      &emsp;&emsp;So, I grabbed myself a hardly ridden 2019 CRF450l for 8gs with only 284 miles on the ODO and that
       was the start of it all. Now this isn’t a bike I’m going to have and turn around and sell in 
       couple years, I’m riding this thing into the ground dragging it from state to state with me as I 
       start my career in engineering and its going to switch jobs as much as indecisive freshman in 
-      collage. One of the first things you expect me to do get a pipe and EDU, but not I’m leaving stock 
+      collage. One of the first things you expect me to do is get a pipe and EDU, but not I’m leaving stock 
       as I love a quite bike and the mellow smooth power delivery this thing has (that is after you 
       remove the backfire screen from the air filter).
     </p> 
-
-
+    <p>
+      &emsp;&emsp;So here is a little background to help you understand why I picked this bike. I grew 
+      up riding dirt bikes and racing throughout my teenage years, even entered a couple WORCS races. 
+      Now I’m in my late twenties and always up for going out into the wild completely unprepared 
+      whether that be the open water or deserts of Arizona. So why did I get this bike over a KTM EXC? 
+      Well for one thing its quieter and vibrates a lot less, second, it’s a Honda so I can get parts for 
+      it anywhere, and last this shares it’s motor and suspension with all the modern Honda 450’s of 
+      which I happen to own a 2020 CRF450r at the moment.This means I can directly take that’s bikes 
+      wheels and suspension and throw them on big L and go to town at the mx track abiet with 60 
+      extra pounds wet.
     </p>
+    <p>
+      &emsp;&emsp;
+    </p>
+    <p>
+      &emsp;&emsp;
+    </p>
+
+
+    
   </article>
   <footer>
     <a href="https://www.instagram.com/barticus455/">
