--- a/content/post9242022.html
+++ b/content/post9242022.html
@@ -47,11 +47,11 @@
     </p>
 
     <p>    
-      &emsp;&emsp;So, I grabbed myself a hardly ridden 2019 CRF450l for 8gs with only 284 miles on the ODO and that
+      &emsp;&emsp;So, I grabbed myself a hardly ridden 2019 CRF450l for 8gs with only 284 miles on the odometer and that
       was the start of it all. Now this isn’t a bike I’m going to have and turn around and sell in 
       couple years, I’m riding this thing into the ground dragging it from state to state with me as I 
       start my career in engineering and its going to switch jobs as much as indecisive freshman in 
-      collage. One of the first things you expect me to do is get a pipe and EDU, but not I’m leaving stock 
+      collage. One of the first things you expect me to do is get a pipe and ECU, but not I’m leaving stock 
       as I love a quite bike and the mellow smooth power delivery this thing has (that is after you 
       remove the backfire screen from the air filter).
     </p> 
@@ -61,7 +61,7 @@
       Now I’m in my late twenties and always up for going out into the wild completely unprepared 
       whether that be the open water or deserts of Arizona. So why did I get this bike over a KTM EXC? 
       Well for one thing its quieter and vibrates a lot less, second, it’s a Honda so I can get parts for 
-      it anywhere, and last this shares it’s motor and suspension with all the modern Honda 450’s of 
+      it anywhere, and last this shares it’s motor(mostly) and suspension with all the modern Honda 450’s of 
       which I happen to own a 2020 CRF450r at the moment.This means I can directly take that’s bikes 
       wheels and suspension and throw them on big L and go to town at the mx track abiet with 60 
       extra pounds wet.
