--- a/blogposts.html
+++ b/blogposts.html
@@ -28,12 +28,14 @@
     <article>
       <h2>Blog posts</h2>
       <p class="mainpar">
-        <a href="content/post9242022.html">New Bike Day<br /><small>9-24-2022</small></a
-        ><br /><br /><br />
-        <a href="content/post8202022.html">Website Development Log #1<br /><small>8-20-2022</small></a
-        ><br /><br /><br />
-        <a href="content/post8152022.html">Procrastination<br /><small>8-15-2022</small></a
-        ><br /><br /><br />
+        <a href="content/post7252022.html">Open Source Hardware 1<br /><small>7-25-2023</small></a>
+        <br /><br /><br />
+        <a href="content/post9242022.html">New Bike Day<br /><small>9-24-2022</small></a>
+        <br /><br /><br />
+        <a href="content/post8202022.html">Website Development Log #1<br /><small>8-20-2022</small></a>
+        <br /><br /><br />
+        <a href="content/post8152022.html">Procrastination<br /><small>8-15-2022</small></a>
+        <br /><br /><br />
       </p>
     </article>
     <footer>
