--- a/content/post9242022.html
+++ b/content/post9242022.html
@@ -45,7 +45,6 @@
       different when people think of a do it all bike because you end up with bike that’s
        not great on the road. I think this bike can ready do it all though.
     </p>
-
     <p>    
       &emsp;&emsp;So, I grabbed myself a hardly ridden 2019 CRF450l for 8gs with only 284 miles on the odometer and that
       was the start of it all. Now this isn’t a bike I’m going to have and turn around and sell in 
@@ -64,10 +63,12 @@
       it anywhere, and last this shares it’s motor(mostly) and suspension with all the modern Honda 450’s of 
       which I happen to own a 2020 CRF450r at the moment.This means I can directly take that’s bikes 
       wheels and suspension and throw them on big L and go to town at the mx track abiet with 60 
-      extra pounds wet.
+      extra pounds wet. I think it's 90 as competitive as the EXC and twice a good to own and live with on the daily.
     </p>
     <p>
-      &emsp;&emsp;
+      &emsp;&emsp;When got the bike it had a sad set of saggy foot pegs that weren’t made for the bike and
+      leopard print seat cover. The good thing was even though they didn’t mention the scrapes from dropping it on the road
+      I could tell this bike had never been offroad and still had original seat cover(100+ dollars saved). 
     </p>
     <p>
       &emsp;&emsp;
